# ecommerc_mongodb/src/routes/client.js
@@ -1,11 +1,12 @@
 const express = require('express');
+const mongoose = require('mongoose');
 const Client =require('../models/modelsClient/client');
 const TypeOfDoc = require('../models/modelsClient/typeOfDocument')
 const connectDB = require('../middlewares/connectDB');
 const router = express.Router();
 
 router.post('/client', connectDB, async (req, res)=>{
-   //#swagger.tags = ['Cliente']
+   //#swagger.tags = ['Clients']
 
   let {name, email, address, telephone, typeOfDocument, numberDocument } = req.body;
   
@@ -23,7 +24,7 @@ router.post('/client', connectDB, async (req, res)=>{
 });
 
 router.get('/client', connectDB, async (req, res) => {
-  //#swagger.tags = ['Cliente']
+  //#swagger.tags = ['Clients']
   try {
       // Encontra todos os clientes e popula o campo 'typeOfDocument'
       let getClients = await Client.find().populate('typeOfDocument').exec();
@@ -37,34 +38,46 @@ router.get('/client', connectDB, async (req, res) => {
 
 
 router.get('/client/:id', connectDB, async (req, res)=>{
-  //#swagger.tags = ['Cliente']
+  //#swagger.tags = ['Clients']
   const {id} = req.params;
 try {
+  if (!mongoose.Types.ObjectId.isValid(id)) {
+    return res.status(400).json({ message: 'ID inválido' });
+  }
   const getOneClients = await Client.findById(id);
   return res.status(200).json(getOneClients);
 } catch (error) {
   console.error(error);
-  return res.status(500).json({ message: 'Erro ao buscar cliente', error: error.message });
+  return res.status(500).json({ message: 'Erro no servidor'});
 }
 });
 
 router.put('/client/:id', connectDB, async (req, res)=>{
-  //#swagger.tags = ['Cliente']
+  //#swagger.tags = ['Clients']
   const body = req.body;
   const {id} = req.params;
 try {
+  if(!mongoose.Types.ObjectId.isValid(id)){
+    return res.status(400).json({ message: 'ID inválido' });
+  }
+   
   const putClient = await Client.findByIdAndUpdate(id, body, {new: true});
   return res.status(200).json(putClient);
 } catch (error) {
   console.error(error);
-  return res.status(500).json({ message: 'Erro ao atualizar cliente', error: error.message });
+  return res.status(500).json({  message: 'Erro ao deletar cliente', error: error.message });
 }
 });
 
 router.delete('/client/:id', connectDB, async (req, res)=>{
-  //#swagger.tags = ['Cliente']
+  //#swagger.tags = ['Clients']
   const {id} = req.params;
+  
 try {
+    if(!mongoose.Types.ObjectId.isValid(id)){
+      return res.status(400).json({ message: 'ID inválido' });
+    }
+
   const deleteClient = await Client.findByIdAndDelete(id);
   return res.status(200).json(deleteClient);
 } catch (error) {
